clusters/openshift/apps/media/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
  - name: openshift-gateway
    namespace: openshift-ingress
    sectionName: https
  - name: openshift-gateway-internal
    namespace: openshift-ingress
    sectionName: https
  hostnames:
  - photos.vanillax.xyz
  rules:
  - backendRefs:
    - name: immich-server
      port: 2283
    matches:
    - path:
        type: PathPrefix
        value: "/"
